# babilonia

./: .gitignore  docker-compose.yml
arquitectura/: 0.-arquitectura.md  1.-data_core.md  2.-orquestador.md  3.-modulador.md  4.-ejecutor.md  5.-facilitador.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: ingest.py
backend/app/data_core/librarian/: sanitizer.py  tagger.py
backend/app/data_core/router/: engine.py
backend/app/services/data_core/: engine.py
backend/app/services/data_core/librarian/: sanitizer.py
backend/app/services/data_core/models/: schema.py
backend/app/services/data_core/router/: engine.py
frontend/: Dockerfile
frontend/src/: App.tsx
frontend/src/components/: Sidebar.tsx
frontend/src/components/tabs/: Ingestion.tsx  Observability.tsx  QueryChat.tsx
project/: index.html
project/src/components/: TopBar.tsx
project/src/components/tabs/: Ingestion.tsx
